<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgwhite"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_welcome_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/silaisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:text="@string/Ayah"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/namapgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namapgl"
        android:layout_below="@+id/silaisi"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        />
    <EditText
        android:id="@+id/namefield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/namapgl"
        android:hint="@string/isi"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/JL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JL"
        android:layout_below="@+id/namefield"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        />
    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_below="@id/JL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radiopersonal"
            android:checked="true"
            android:text="@string/laki"
            android:layout_marginLeft="10dp"
            android:textColor="@color/grayform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/radioorg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/perempuan"
            android:textColor="@color/grayform"
            />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/radiogroup"
        android:background="@color/grayform"
        />

    <TextView
        android:id="@+id/umursekarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/umursekarang"
        android:layout_below="@+id/radiogroup"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        />
    <EditText
        android:id="@+id/agefield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isi"
        android:layout_below="@id/umursekarang"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:layout_marginTop="20dp"
        android:layout_below="@id/agefield"
        />
    <Button
        android:id="@+id/daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:layout_marginTop="20dp"
        android:layout_below="@id/note"
        android:text="Daftar"
        android:textColor="@color/whitetext"
        />


</RelativeLayout>