<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg2"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".home">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        app:cardBackgroundColor="@color/whitetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo2"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_welcome_parent"
                />
            <TextView
                android:id="@+id/yeay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gz"
                android:layout_below="@id/logo2"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/nama"
                android:text="@string/output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_below="@id/yeay"
                />
            <TextView
                android:id="@+id/usecode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usecode"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/nama"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded2"
                android:layout_marginTop="20dp"
                android:layout_below="@id/usecode"
                android:paddingHorizontal="40dp"
                android:layout_centerHorizontal="true"
                android:text="@string/code"
                android:textColor="@color/biruanu"
                android:layout_marginBottom="20dp"
                />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/bingung"
        android:layout_gravity="center"
        android:gravity="center"

        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:layout_marginTop="20dp"
        android:layout_below="@id/note"
        android:layout_gravity="center"
        android:text="Lihat Tutorial"
        android:textColor="@color/whitetext"
        />
</LinearLayout>

